# RoboMaster_vision_Armor

./: README.md
Camera/log/: error_20260401-194953.16099  error_20260401-195851.16697  error_20260401-211140.27733  error_20260401-211217.27948  error_20260401-212022.28769  error_20260401-212050.28930  error_20260401-212426.29283  error_20260401-212438.29499  error_20260401-213457.30530  error_20260401-213509.30933  error_20260401-213530.31073  error_20260401-213727.31821  error_20260401-214017.32089  error_20260401-214105.32657  error_20260404-104640.18992  error_20260404-104816.19310  warning_20260401-195200.16697  warning_20260401-211214.27948  warning_20260401-213510.30933  warning_20260401-213921.32089  warning_20260401-214104.32657
cpp08_armor_detector/: CMakeLists.txt  readme.md
cpp08_armor_detector/include/cpp08_armor_detector/: armor_detector.hpp  armor_detector_lightbar.hpp  armor_detector_matching.hpp  uart_protocol.hpp  uart_work.hpp
cpp08_armor_detector/install/: setup.ps1  setup.sh  setup.zsh
cpp08_armor_detector/install/cpp08_armor_detector/include/cpp08_armor_detector/cpp08_armor_detector/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
cpp08_armor_detector/install/cpp08_armor_detector/include/cpp08_armor_detector/cpp08_armor_detector/msg/detail/: armor_target__struct.hpp  armor_target__traits.hpp  armor_target__type_support.h
cpp08_armor_detector/install/cpp08_armor_detector/lib/cpp08_armor_detector/: detect_node
cpp08_armor_detector/install/cpp08_armor_detector/local/lib/python3.10/dist-packages/cpp08_armor_detector/: _cpp08_armor_detector_s.ep.rosidl_typesupport_c.c
cpp08_armor_detector/install/cpp08_armor_detector/share/ament_index/resource_index/parent_prefix_path/: cpp08_armor_detector
cpp08_armor_detector/install/cpp08_armor_detector/share/cpp08_armor_detector/: local_setup.sh  package.sh
cpp08_armor_detector/install/cpp08_armor_detector/share/cpp08_armor_detector/cmake/: ament_cmake_export_targets-extras.cmake  cpp08_armor_detector__rosidl_typesupport_introspection_cppExport.cmake  export_cpp08_armor_detector__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_cpp08_armor_detector__rosidl_typesupport_fastrtps_cppExport.cmake
cpp08_armor_detector/install/cpp08_armor_detector/share/cpp08_armor_detector/launch/: armor_launch.py
cpp08_armor_detector/src/: armor_detector.cpp  armor_detector_core.cpp  armor_detector_lightbar.cpp  armor_detector_matching.cpp  armor_detector_preprocess.cpp  armor_detector_tracking.cpp  armor_detector_visualization.cpp  camera_node.cpp  detect_node.cpp  uart_protocol.cpp  uart_work.cpp
include/cpp08_armor_detector/: armor_detector.hpp  armor_detector_lightbar.hpp  kalman_filter.hpp  uart_protocol.hpp
install/: local_setup.sh  setup.bash  setup.sh
log/: latest_build
src/: armor_camera_capture.cpp  armor_detector.cpp  armor_detector_core.cpp  armor_detector_preprocess.cpp  armor_detector_visualization.cpp  armor_ekf.cpp  camera_node.cpp  detect_node.cpp  uart_protocol.cpp  uart_work.cpp
src/Camera/log/: error_20260315-150835.33779  error_20260315-151226.37237  error_20260315-153552.8759  error_20260315-162812.47667  error_20260316-192923.21927  error_20260316-193328.25584  error_20260316-193603.27814  error_20260316-201507.8386  error_20260325-201041.104276  error_20260325-202446.117604  error_20260325-203812.127718  error_20260325-204318.131752  error_20260325-204437.133040  error_20260325-204610.134361  error_20260325-205452.142015  error_20260325-211009.154050  error_20260325-211131.154482  error_20260325-211353.157108  error_20260325-211551.158803  error_20260325-213536.173490  error_20260325-214121.179712  error_20260325-214513.182581  error_20260326-123837.9848  error_20260326-124209.13660  error_20260326-124716.17758  error_20260326-125100.21231  error_20260326-134155.65041  error_20260326-134252.65954  error_20260326-135127.72106  error_20260326-135437.74554  error_20260326-140009.78781  error_20260326-140311.81097  error_20260326-140636.83891  error_20260326-140748.84548  error_20260326-140810.85144  error_20260326-141612.88412  error_20260326-142540.97389  error_20260326-142911.102220  error_20260326-143213.105558  error_20260326-143233.106187  (+18 more)
src/cpp08_armor_detector/: CMakeLists.txt  package.xml  readme.md
src/cpp08_armor_detector/include/cpp08_armor_detector/: armor_camera_capture.hpp  armor_detector.hpp  armor_detector_matching.hpp  kalman_filter.hpp  uart_protocol.hpp  uart_work.hpp
src/cpp08_armor_detector/install/: local_setup.sh  setup.bash
src/cpp08_armor_detector/install/cpp08_armor_detector/include/cpp08_armor_detector/cpp08_armor_detector/msg/detail/: armor_target__functions.c
src/cpp08_armor_detector/install/cpp08_armor_detector/lib/cpp08_armor_detector/: camera_node
src/cpp08_armor_detector/install/cpp08_armor_detector/local/lib/python3.10/dist-packages/cpp08_armor_detector-0.0.0-py3.10.egg-info/: PKG-INFO
src/cpp08_armor_detector/install/cpp08_armor_detector/share/cpp08_armor_detector/: package.ps1
src/cpp08_armor_detector/install/cpp08_armor_detector/share/cpp08_armor_detector/cmake/: ament_cmake_export_include_directories-extras.cmake  cpp08_armor_detector__rosidl_typesupport_introspection_cExport-noconfig.cmake  export_cpp08_armor_detector__rosidl_generator_cExport-noconfig.cmake
src/cpp08_armor_detector/install/cpp08_armor_detector/share/cpp08_armor_detector/msg/: ArmorTarget.idl  ArmorTarget.msg
src/cpp08_armor_detector/launch/: armor_camera_launch.py  armor_launch.py  armor_launch_galaxy.py
src/cpp08_armor_detector/msg/: ArmorTarget.msg
src/cpp08_armor_detector/src/: armor_detector.cpp  armor_detector_core.cpp  armor_detector_lightbar.cpp  armor_detector_matching.cpp  armor_detector_preprocess.cpp  armor_detector_tracking.cpp  armor_ekf.cpp  camera_node.cpp  detect_node.cpp  uart_protocol.cpp  uart_work.cpp
src/rm_vision_ros2_galaxy_camera-master/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/rm_vision_ros2_galaxy_camera-master/log/: latest_build
src/ros2_mindvision_camera/: camera_info.yaml
(+41 files in other folders)
